--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.SharingHobby"
+        applicationId "com.example.sharinghobby"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
