--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
         <activity android:name=".SearchActivity"></activity>
         <activity android:name=".MapActivity"></activity>
         <activity android:name=".FindHobbyActivity"></activity>
-        <activity android:name=".CategoryActivity"></activity>
+        <activity android:name=".CategoryActivity1"></activity>
         <activity android:name=".HomeActivity"></activity>
 
         <meta-data
