간단한 홈화면 연결

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,20 +37,18 @@
         <activity android:name=".Join1Activity" />
         <activity android:name=".JoinActivity" />
         <activity android:name=".MainActivity">
-
-        </activity>
-
-        <activity android:name=".SearchActivity"></activity>
-        <activity android:name=".MapActivity"></activity>
-        <activity android:name=".FindHobbyActivity"></activity>
-        <activity android:name=".CategoryActivity1"></activity>
-        <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".MapActivity"></activity>
+        <activity android:name=".FindHobbyActivity"></activity>
+        <activity android:name=".CategoryActivity1"></activity>
+        <activity android:name=".HomeActivity"></activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
