로그인 화면 연결 완성
제목과 동일

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,10 +33,10 @@
         <activity android:name=".MBselectedActivity" />
 
         <activity android:name=".CenterActivity" />
-        <activity android:name=".FindActivity" />
+        <activity android:name=".FindAccountActivity" />
         <activity android:name=".Join1Activity" />
         <activity android:name=".JoinActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".loginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
