--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,9 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
 
     buildTypes {
@@ -76,4 +77,6 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
+    
+    implementation 'com.google.android.material:material:1.0.0' // NavigationView
 }
