--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OurFriendlyMeeting">
-        <activity
-            android:name=".MadeGroup3Activity"
-            android:label="@string/title_activity_made_group3"
-            android:theme="@style/Theme.OurFriendlyMeeting.NoActionBar"></activity>
+
         <activity android:name=".MadeGroup2Activity" />
         <activity android:name=".MadeGroupActivity" />
         <activity android:name=".CategoryActivity" />
@@ -30,13 +27,19 @@
         <activity android:name=".BelongSmallGroup" />
         <activity android:name=".MadeActivity" />
         <activity android:name=".BelongActivity" />
-        <activity android:name=".MBselectedActivity" />
+        <activity android:name=".CreateHobbyActivity"/>
+        <activity android:name=".ChatActivity"/>
 
-        <activity android:name=".CenterActivity" />
         <activity android:name=".FindAccountActivity" />
         <activity android:name=".Join1Activity" />
         <activity android:name=".JoinActivity" />
         <activity android:name=".loginActivity">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
         </activity>
 
@@ -45,11 +48,7 @@
         <activity android:name=".CategoryActivity1"></activity>
         <activity android:name=".HomeActivity">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
 
