--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OurFriendlyMeeting">
         <activity
+            android:name=".ChattingListView"
+            android:exported="true" />
+        <activity
             android:name=".view.gallaryActivity"
             android:exported="true" />
         <activity android:name=".MadeGroup2Activity" />
@@ -42,8 +45,7 @@
         <activity android:name=".SearchActivity" />
         <activity android:name=".MapActivity" />
         <activity android:name=".CategoryActivity1" />
-        <activity android:name=".HomeActivity">
-        </activity>
+        <activity android:name=".HomeActivity"></activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
